added more stuff. 4.30 am update

--- a/index.html
+++ b/index.html
@@ -15,13 +15,17 @@
 	</head>
 	<body>
 		<header>
-			<h1> Computer Education Time Series | Organisation for Economic Co-operation and Development </h1>
+			
 			<nav>
 				<ul>
 					<li><a href="index.html">Home</a></li>
+					<li><a href="data.html">Data</a></li>
 					<li><a href="graph.html">Graph</a></li>
+					<li><a href="map.html">Map</a></li>
 				</ul>
 			</nav>
+			<img src="images/logooecd_en.png" />
+			<h1>  Organisation for Economic Co-operation and Development | Computer Education Time Series</h1>
 		</header>
 		
 		<div id="container">
@@ -37,10 +41,22 @@
 				<div class="div-body">
 				</div>
 			</aside>
-			
+			<section id="main">
+				<div class="div-head">
+				</div>
+				<div class="div-body">
+				</div>
+			</section><!-- end section --> 
+			<aside id="about">
+				<div class="div-head">
+				</div>
+				<div class="div-body">
+				</div>
+			</aside>
 		</div><!--end container --> 
 		<footer>
-			<h5> &copy;OECD 2012 | Website developed by Michael Dabydeen & Daniel Audino </h5> 
+			<h5> &copy;&nbsp;OECD 2012 | Website developed by
+			<a href="http://www.michaeldabydeen.com" target="_blank"> Michael Dabydeen</a> & <a href="http://www.michaeldabydeen.com" 					target="_blank"> Daniel Audino</a> </h5> 
 		</footer>
 	</body>
 </html>
