sunday night: first push

--- a/map.html
+++ b/map.html
@@ -37,7 +37,7 @@
 			function handleResponse(xml){
 				
 				$(xml).find("country").each(function(){
-					add =  $(this).text()
+					add[] =  $(this).text();
 				});		
 				codeAddress(add);
 			}
