--- a/index.html
+++ b/index.html
@@ -2,20 +2,28 @@
 <html>
 	<head>
 		<title>Home | OECD - Computer Education Data</title>
-		<script src="http://code.jquery.com/jquery-latest.min.js"
+	<script src="http://code.jquery.com/jquery-latest.min.js"
         type="text/javascript"></script>
 		<meta name="viewport" content="initial-scale=1.0, width=device-width"/>
-		<link rel="stylesheet" media="screen" href="style/reset.css" />
-		<link rel="stylesheet" media="screen and (max-device-width: 480px)" href="style/mobile.portrait.css" />
-		<link rel="stylesheet" media="screen and (max-device-width: 720px)" href="style/mobile.landscape.css" />
-		<link rel="stylesheet" media="screen" href="style/style.css" />
-		<script type="text/javascript">
 			
-		</script>
+	<!-- external stylesheet -->
+	<link rel="stylesheet" type="text/css" href="style/reset.css" /> 
+	<link rel="stylesheet" type="text/css" href="style/style.css" 
+		  media="screen and (min-width:900px)" />
+
+	<link rel="stylesheet" type="text/css" href="style/style.css"  
+		  media="screen	and (min-width: 500px) and (max-width: 899px)" />	
+
+	<link rel="stylesheet" type="text/css" href="style/mobile.landscape.css"   
+		  media="screen and (max-width: 499px) and (orientation:landscape),
+		  		 screen and (max-device-width: 499px) and (orientation:landscape)" />		  
+	
+	<link rel="stylesheet" type="text/css" href="style/mobile.css"   
+		  media="screen and (max-width: 360px) and (orientation:portrait),
+		  		 screen and (max-device-width: 360px) and (orientation:portrait)" />
 	</head>
 	<body>
 		<header>
-			
 			<nav>
 				<ul>
 					<li><a href="index.html">Home</a></li>
