--- a/map.html
+++ b/map.html
@@ -4,11 +4,18 @@
 		<title>Maps | OECD - Computer Education Data</title>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
 		<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-		<meta name="viewport" content="initial-scale=1.0, width=device-width"/>
-		<link rel="stylesheet" media="screen" href="style/reset.css" />
-		<link rel="stylesheet" media="screen and (max-device-width: 480px)" href="style/mobile.portrait.css" />
-		<link rel="stylesheet" media="screen and (max-device-width: 720px)" href="style/mobile.landscape.css" />
-		<link rel="stylesheet" media="screen" href="style/style.css" />
+		<meta name="viewport" content="initial-scale=1.0, width=device-width"/>	
+		<!-- external stylesheet -->
+		<link rel="stylesheet" type="text/css" href="style/reset.css" /> 
+		<link rel="stylesheet" type="text/css" href="style/style.css" media="screen and (min-width:900px)" />
+
+		<link rel="stylesheet" type="text/css" href="style/style.css" media="screen and (min-width: 500px) and (max-width: 899px)" />	
+
+		<link rel="stylesheet" type="text/css" href="style/mobile.landscape.css" media="screen and (max-width: 499px) and 				(orientation:landscape), screen and (max-device-width: 499px) and (orientation:landscape)" />		  
+	
+		<link rel="stylesheet" type="text/css" href="style/mobile.css"  media="screen and (max-width: 360px) and (orientation:portrait),
+		  		 screen and (max-device-width: 360px) and (orientation:portrait)" />
+		
 		<script type="text/javascript"
       				src="http://maps.googleapis.com/maps/api/js?key=AIzaSyC2x1QVNOvwHGW5PCpP6SNj8YEhjmcjRqs&sensor=false">
     		</script>
