--- a/data.html
+++ b/data.html
@@ -27,7 +27,7 @@
 		</header>
 		
 		<div id="container">
-			<div id="content"></div>
+			<table></table>
 		</div><!--end container --> 
 		<footer>
 			<h5> &copy;&nbsp;OECD 2012 | Website developed by
