--- a/graph.html
+++ b/graph.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<head>
 		<title>Data | OECD - Computer Education Data</title>
 		<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
@@ -26,8 +27,12 @@
 			<h1>  Organisation for Economic Co-operation and Development | Computer Education Time Series</h1>
 		</header>
 <div id="container">
-    <canvas id="graph" width="300" height="300"></canvas>
-<div id="test"></div>
+<div id="Title0"></div>
+    <canvas id="graph1" width="600" height="500"></canvas>
+<div id="Legend0"></div>
+<div id="Title1"></div>
+	<canvas id="graph2" width="600" height="500"></canvas>
+<div id="Legend1"></div>
 </div>
 <footer>
 			<h5> &copy;&nbsp;OECD 2012 | Website developed by
