Changed file structure etc

--- a/map.html
+++ b/map.html
@@ -19,7 +19,7 @@
 		<script type="text/javascript"
       				src="http://maps.googleapis.com/maps/api/js?key=AIzaSyC2x1QVNOvwHGW5PCpP6SNj8YEhjmcjRqs&sensor=false">
     		</script>
-		<script type="text/javascript" src="maps.js"></script>
+		<script type="text/javascript" src="scripts/maps.js"></script>
 	</head>
 	<body>
 		<header>
