--- a/data.html
+++ b/data.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" media="screen and (max-device-width: 480px)" href="style/mobile.portrait.css" />
 		<link rel="stylesheet" media="screen and (max-device-width: 720px)" href="style/mobile.landscape.css" />
 		<link rel="stylesheet" media="screen" href="style/style.css" />
-		<script src="data.js" type="text/javascript"></script>
+		<script src="scripts/data.js" type="text/javascript"></script>
 	</head>
 	<body>
 		<header>
