--- a/graph.html
+++ b/graph.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" media="screen and (max-device-width: 720px)" href="style/mobile.landscape.css" />
 		<link rel="stylesheet" media="screen" href="style/style.css" />
 		<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-		<script src="graph.js" type="text/javascript"></script>
+		<script src="scripts/graph.js" type="text/javascript"></script>
   	</head>
 <body>
 		<header>
