--- a/index.html
+++ b/index.html
@@ -39,28 +39,22 @@
 		<div id="container">
 			<section id="main">
 				<div class="div-head">
+					About the Project
 				</div>
 				<div class="div-body">
+					Welcome to the OECD- Home Page. This is your gateway to our example of using JQuery and mobile design techniologys to display usefull information. Within this project we have implemented CSS responsive designs and a large quanity of JQuery and HTML5 technologys. All the pages retrive there information form an XML file and display that information in interesting ways.
+<br /> On the Graph page you will be able to see the growth and declines of enrolled students in courses in many countrys accross the world with the use of Line charts and HTML5 cavas.
+ <br />On the Data page you will see the table representation of the data within the XML file.
+ <br />Lastly there is the Map page, this page tags all the countrys involved in the xml file onto a Google map api screen.
 				</div>
 			</section><!-- end section --> 
 			<aside id="about">
 				<div class="div-head">
+					Executive Summary
 				</div>
 				<div class="div-body">
+					This project has been developed to provide users with a fluent interface and representation of data retrieved from an XML file. The data we are representing is the growth and change of students enrolled within college courses and Computer tech courses from 2004-2009. Responsive CSS, Jquery, Javascript and HTML5 are the majority of technologies involved in the creation of this project.
 				</div>
-			</aside>
-			<section id="main">
-				<div class="div-head">
-				</div>
-				<div class="div-body">
-				</div>
-			</section><!-- end section --> 
-			<aside id="about">
-				<div class="div-head">
-				</div>
-				<div class="div-body">
-				</div>
-			</aside>
 		</div><!--end container --> 
 		<footer>
 			<h5> &copy;&nbsp;OECD 2012 | Website developed by
