--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 <html>
 	<head>
 		<title>Home | OECD - Computer Education Data</title>
-	<script src="http://code.jquery.com/jquery-latest.min.js"
-        type="text/javascript"></script>
 		<meta name="viewport" content="initial-scale=1.0, width=device-width"/>
 			
 	<!-- external stylesheet -->
@@ -47,6 +45,34 @@
 				<div class="div-head">
 				</div>
 				<div class="div-body">
+					<p>The mission of the Organisation for Economic Co-operation
+					and Development (OECD) is to promote policies that will improve
+					the economic and social well-being of people around the world.
+					</p>
+					<p>The OECD provides a forum in which governments can work 
+						together to share experiences and seek solutions to common
+						problems. We work with governments to understand what drives
+						economic, social and environmental change. We measure productivity 
+						and global flows of trade and investment. We analyse and compare data 
+						to predict future trends. We set international standards on a wide range 
+						of things, from agriculture and tax to the safety of chemicals.
+					</p>
+					<p>We look, too, at issues that directly affect the lives of ordinary 
+						people, like how much they pay in taxes and social security, and how much 
+						leisure time they can take. We compare how different countries’ school systems 
+						are readying their young people for modern life, and how different countries’ 
+						pension systems will look after their citizens in old age.
+					</p>
+					<p>Drawing on facts and real-life experience, we recommend policies designed to make 
+						the lives of ordinary people better. We work with business, through the Business and
+						Industry Advisory Committee to the OECD, and with labour, through the Trade Union Advisory 
+						Committee. We have active contacts as well with other civil society organisations. The common 
+						thread of our work is a shared commitment to market economies backed by democratic institutions
+						and focused on the wellbeing of all citizens. Along the way, we also set out to make life harder 
+						for the terrorists, tax dodgers, crooked businessmen and others whose actions undermine a fair and
+						open society.
+					</p>
+					<p> Read more on the <a href="http://www.oecd.org/about/" target="_blank" >OECD Website</a></p>
 				</div>
 			</aside>
 			<section id="main">
@@ -64,7 +90,8 @@
 		</div><!--end container --> 
 		<footer>
 			<h5> &copy;&nbsp;OECD 2012 | Website developed by
-			<a href="http://www.michaeldabydeen.com" target="_blank"> Michael Dabydeen</a> & <a href="http://www.michaeldabydeen.com" 					target="_blank"> Daniel Audino</a> </h5> 
+			<a href="http://www.michaeldabydeen.com" target="_blank"> Michael Dabydeen</a> & <a href="http://www.danielaudino.com" target="_blank"> Daniel Audino</a> </h5>
 		</footer>
+		<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
 	</body>
 </html>
